$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

December 4, 2010
----------------
#982238 by Michelle: Forced 'New topic' to first in list of node creation links.
#982238 by Michelle: Added ability to get nodes allowed in a particular vocabulary and set up stub for per term.
#974840 by Michelle: Redid 'Post reply' link handling.
NOISSUE by Michelle: Created new theme function theme_advanced_forum_l() to centralize link printing and give themers more control.
NOISSUE by Michelle: Expanded statistics to show last 5 new users.
#868942 by Michelle: Fixed node links to only buttonize specific ones so it doesn't try to buttonize the tags.
NOISSUE by Michelle: Lots of cleanup, fixing, re-arranging, simplifying code.
#961050 by designerbrent: Made forum 'folder' CSS more specific to avoid themes overriding it.
#869006 by carlthuringer, Michelle: Changed @ to ! in topic navigation t() to avoid a second run through check_plain.
#829540 by Michelle: Added sanity check on teaser split removal to avoid edge case error.

December 2, 2010
----------------
#935322 by Michelle: Fixed node add links being relative.
#935322 by Michelle: Fixed unclosed 'a' causing wonkiness.
NOISSUE by Michelle: Fixed missing t() on View Forums tab.
#868942 by Michelle, WorldFallz: Added CSS for image-less button to boxy. More of an example than anything at this point as it's likely to be changed.
#868942 by Michelle: Removed all language dependent button images.
#868942 by Michelle: Added small AF buttons to boxy CSS only example and made the colors a bit better.

November 17, 2010
-----------------
#559536 by troky, Michelle: Fixed $vars/$variables mixup in the topic list view include and removed the extra <br> from the last author field rewrite that had been compensating.
#831364 by Michelle, Heine: Reverted changing form alter paramater to pass by value that shouldn't have been done.

November 16, 2010
-----------------